--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "react-dom": "18.0.0",
     "react-scripts": "4.0.3"
   },
+  
+  "engines" : {
+    "npm":>=8.0.0 <9.0.0",
+    "node":">=16.0.0 <17.0.0"
+  },
+  
   "devDependencies": {
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
