--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   
   "engines" : {
-    "npm":>=8.0.0 <9.0.0",
-    "node":">=16.0.0 <17.0.0"
+    "npm":>=5.0.0",
+    "node":">=16.0.0"
   },
   
   "devDependencies": {
